[package]
name = "oxgame"
version = "0.1.0"
authors = ["taketakeyyy <taketakeyyy@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "oxgame(tic-tac-toe) with wasm-pack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
